<resources>
    <string name="app_name">Books</string>
    <string name="search_books">Search books</string>
    <string name="unknown_author">Unknow Author</string>
    <string name="unknown_title">Unknown Title</string>
    <string name="unknown_publisher">Unknown Publisher</string>
    <string name="pages_labels">Pages</string>
    <string name="about_title">About this book</string>
    <string name="error_network">Network error, please check your connection</string>
    <string name="error_unknown">Something went wrong, please try again</string>
    <string name="unknown_category">Unknown Category</string>
</resources>
