<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".bookdetails.BookDetailsActivity">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:padding="16dp">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/detailsContainer"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toTopOf="parent">

            <ImageView
                android:id="@+id/thumbnail"
                android:layout_width="128dp"
                android:layout_height="195dp"
                android:src="@drawable/no_cover_thumb"
                android:background="@android:color/transparent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintStart_toStartOf="parent"/>

            <TextView
                android:id="@+id/bookTitle"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:textSize="20sp"
                android:textStyle="bold"
                android:textColor="@android:color/black"
                android:text="@string/unknown_title"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@id/thumbnail"/>

            <TextView
                android:id="@+id/author"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginTop="4dp"
                android:textSize="16sp"
                android:textStyle="bold"
                android:text="@string/unknown_author"
                app:layout_constraintTop_toBottomOf="@+id/bookTitle"
                app:layout_constraintStart_toEndOf="@id/thumbnail"/>

            <TextView
                android:id="@+id/publisher"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginTop="4dp"
                android:textSize="16sp"
                android:text="@string/unknown_publisher"
                app:layout_constraintTop_toBottomOf="@+id/author"
                app:layout_constraintStart_toEndOf="@id/thumbnail"/>

            <TextView
                android:id="@+id/category"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginTop="4dp"
                android:padding="3dp"
                android:textSize="12sp"
                android:text="@string/unknown_category"
                android:background="@drawable/category_shape"
                app:layout_constraintTop_toBottomOf="@+id/publisher"
                app:layout_constraintStart_toEndOf="@id/thumbnail"
                tools:text="Some category"/>

            <TextView
                android:id="@+id/pageCount"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="4dp"
                android:layout_marginStart="16dp"
                android:textSize="12sp"
                tools:text="310"
                app:layout_constraintTop_toBottomOf="@+id/category"
                app:layout_constraintStart_toEndOf="@id/thumbnail"/>

            <TextView
                android:id="@+id/pagesLabel"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="4dp"
                android:layout_marginStart="4dp"
                android:textSize="12sp"
                android:text="@string/pages_labels"
                app:layout_constraintTop_toBottomOf="@+id/category"
                app:layout_constraintStart_toEndOf="@id/pageCount"/>

            <RatingBar
                android:id="@+id/ratingBar"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginTop="4dp"
                android:stepSize="0.1"
                android:theme="@style/RatingBar"
                style="?android:attr/ratingBarStyleSmall"
                app:layout_constraintTop_toBottomOf="@+id/pageCount"
                app:layout_constraintStart_toEndOf="@id/thumbnail"/>

        </androidx.constraintlayout.widget.ConstraintLayout>

        <View
            android:id="@+id/separator"
            android:layout_width="match_parent"
            android:layout_height="0.5dp"
            android:layout_marginTop="16dp"
            android:background="@android:color/darker_gray"
            app:layout_constraintTop_toBottomOf="@id/detailsContainer"/>

        <TextView
            android:id="@+id/aboutTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:textSize="16sp"
            android:textStyle="bold"
            android:textColor="@android:color/black"
            android:text="@string/about_title"
            app:layout_constraintTop_toBottomOf="@+id/separator"
            app:layout_constraintStart_toStartOf="parent"/>

        <TextView
            android:id="@+id/description"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:textSize="16sp"
            app:layout_constraintTop_toBottomOf="@+id/aboutTitle"
            app:layout_constraintStart_toStartOf="parent"
            tools:text="This is a description"/>

    </androidx.constraintlayout.widget.ConstraintLayout>
</androidx.core.widget.NestedScrollView>